--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -246,8 +246,8 @@
     "link": "Embedded Code",
     "code": "Paste Code Here",
     "inst": "Instructions",
-    "inst_01": "1.    YouTube (https://www.youtube.com/) पर जाएं और <mission_name> लॉन्च लाइव वीडियो सर्च करें।",
-    "inst_02": "2.    वीडियो खोलें और फिर वीडियो पर राइट क्लिक करें। दिखाए गए अनुसार विकल्प सूची से 'कॉपी एम्बेड कोड' पर टैप करें। विकल्प संलग्न छवि में नीले रंग में घिरा हुआ है।",
+    "inst_01": "1.    <मिशन नाम> के बगल में यूट्यूब आइकन पर क्लिक करके यूट्यूब पर जाएं।",
+    "inst_02": "2.    वीडियो पर राइट क्लिक करें. दिखाए गए अनुसार विकल्प सूची से 'एम्बेड कोड कॉपी करें' पर टैप करें। संलग्न छवि में विकल्प नीले रंग से घिरा हुआ है।",
     "inst_03": "3.    अब बाईं ओर इस पेज पर इनपुट फील्ड में लिंक पेस्ट करें।",
     "inst_04": "4.    और फिर लिक्विड गैलेक्सी रिग पर वीडियो देखने के लिए विजुअलाइज ऑन लिक्विड गैलेक्सी बटन पर क्लिक करें।",
     "inst_05": "5.    यदि अब भी संदेह है तो वीडियो स्पष्टीकरण देखने के लिए इस लिंक पर क्लिक करें।"
