--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -106,10 +106,13 @@
     "mmp": "मास्टर मशीन पासवर्ड",
     "number": "एलजी रिग में कुल मशीनें",
     "connect": "जोड़ना",
+    "disconnect": "वियोजित",
     "alert": "जुड़े हुए!",
     "alert2": "मेजबान उपलब्ध है",
     "alert3": "उफ़!",
-    "alert4": "मेजबान उपलब्ध नहीं है। जांचें कि क्या दी गई जानकारी सही है और क्या मेजबान तक पहुंचा जा सकता है"
+    "alert4": "मेजबान उपलब्ध नहीं है। जांचें कि क्या दी गई जानकारी सही है और क्या मेजबान तक पहुंचा जा सकता है",
+    "alert7": "वियोजित!",
+    "alert8": "होस्ट सफलतापूर्वक डिस्कनेक्ट हो गया है"
   },
   "help": {
     "title": "मदद",
@@ -138,7 +141,14 @@
     "ls": "लॉन्च साइट\nका नाम",
     "so": "विकल्प चुनें",
     "sd": "तारीख़ चुनें",
-    "sdr": "तिथि सीमा का चयन करें"
+    "sdr": "तिथि सीमा का चयन करें",
+    "buildorbit": "कक्षा प्रारंभ करना",
+    "stoporbit": "कक्षा रोकना",
+    "alert": "कोई जियोडेटा नहीं",
+    "alert2": "ऐसा लगता है कि आपने इस प्रोजेक्ट में कोई जियोडेटा नहीं जोड़ा है।",
+    "alert3": "त्रुटि शुभारंभ!",
+    "alert4": "LG से कनेक्ट करने का प्रयास करते समय एक त्रुटि हुई",
+    "close": "बंद करे"
   },
 
   "launchInfo_tab": {
