added about screen

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -13,11 +13,27 @@
     "help": "Help",
     "about": "About",
     "task": "Liquid Galaxy Tasks",
-    "connection": "Connection Manager",
+    "connection": "LG Connection Manager",
     "settings": "Settings",
     "tour": "Take a tour",
     "inventory": "Inventory",
     "exit": "Exit App"
+  },
+  "about": {
+    "title": "About Page",
+    "name": "Rocket Launcher Visualizer App",
+    "author": "Author Name: Manash Kumar",
+    "mentor": "Mentor Name: Yash Raj Bharti & Victor Carreras",
+    "admin": "Organization Admin Name - Andreu Ibáñez",
+    "contact": "Author Contact Info - manash.kumar.cd.eee21@iitbhu.ac.in",
+    "all_about": "All about the Rocket Launcher Visualiser App:",
+    "p1": "⬧ This project was created during the Google Summer of Code 2023 alongside the Liquid Galaxy organization.",
+    "p2": "⬧ This app has been developed by Manash Kumar (email: manash.kumar.cd.eee21@iitbhu.ac.in) under Liquid Galaxy,\n    thanks to the Google Summer of Code 2023 Program.",
+    "p3": "⬧ The RLA app serves as a Tracking Tool for Visualization of the various rocket launches and satellites (mainly starlink)\n    of SpaceX and displays them beautifully with animation KML.",
+    "p4": "⬧ RLA can also use our application for educational and research purposes, such as studying about trajectories of rocket\n    launches and the subsequent steps involved in it, visualizing satellites and their real time position.",
+    "p5": "⬧ Several visualizations of different launch and mission data and satellite data are there with detailed information for each\n    in their more info tab.",
+    "p6": "⬧ The app supports ten languages, namely English, Spanish, Hindi, German, Portugese, Arabic, Russian, Japanese,\n    Chinese (Simplified), and Albanian, which one can change from the Settings menu option.",
+    "p7": "⬧ Developed thanks to the TIC Laboratories of the Scientific Park of Lleida, Liquid Galaxy LAB, Google Summer of Code 2023\n    & SpaceX API"
   },
   "tasks": {
     "LG_tasks": "Liquid Galaxy Tasks",
@@ -25,6 +41,7 @@
     "Shutdown": "Shutdown",
     "Reboot": "Reboot",
     "Logo": "Clean Logo",
+    "ShowLogo": "Show Logo",
     "Clean": "Clean KML",
     "alert": "Success!",
     "alert2": "You can find a KML containing the map data of the project in your Downloads folder",
