--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -13,11 +13,27 @@
     "help": "Ayudar",
     "about": "Acerca de",
     "task": "Tareas Liquid Galaxy",
-    "connection": "Administrador de conexión",
+    "connection": "LG Administrador de conexión",
     "settings": "Ajustes",
     "tour": "hacer un recorrido",
     "inventory": "Inventario",
     "exit": "Salida"
+  },
+  "about": {
+    "title": "Acerca de la página",
+    "name": "Aplicación Rocket Launcher Visualizer",
+    "author": "Nombre del autor: Manash Kumar",
+    "mentor": "Nombre del mentor: Yash Raj Bharti y Victor Carreras",
+    "admin": "Nombre del administrador de la organización - Andreu Ibáñez",
+    "contact": "Información de contacto del autor: manash.kumar.cd.eee21@iitbhu.ac.in",
+    "all_about": "Todo sobre la aplicación Rocket Launcher Visualiser:",
+    "p1": "⬧ Este proyecto fue creado durante el Google Summer of Code 2023 junto con la organización Liquid Galaxy.",
+    "p2": "⬧ Esta aplicación ha sido desarrollada por Manash Kumar (correo electrónico: manash.kumar.cd.eee21@iitbhu.ac.in) bajo Liquid Galaxy,\n    gracias al programa Google Summer of Code 2023.",
+    "p3": "⬧ La aplicación RLA sirve como una herramienta de seguimiento para la visualización de varios lanzamientos de cohetes y satélites (principalmente Starlink)\n    de SpaceX y los muestra maravillosamente con animación KML.",
+    "p4": "⬧ RLA también puede usar nuestra aplicación con fines educativos y de investigación, como estudiar las trayectorias de cohetes\n    lanzamientos y los pasos posteriores involucrados en el mismo, visualizando los satélites y su posición en tiempo real.",
+    "p5": "⬧ Varias visualizaciones de diferentes datos de lanzamiento y misión y datos satelitales están ahí con información detallada para cada uno\n    en su pestaña de más información.",
+    "p6": "⬧ La aplicación admite diez idiomas, a saber, inglés, español, hindi, alemán, portugués, árabe, ruso, japonés,\n    chino (simplificado) y albanés, que se pueden cambiar desde la opción de menú Administrador de conexión.",
+    "p7": "⬧ Desarrollado gracias a los Laboratorios TIC del Parque Científico de Lleida, Liquid Galaxy LAB, Google Summer of Code 2023\n    y la API de SpaceX"
   },
   "tasks": {
     "LG_tasks": "Tareas de Liquid Galaxy",
@@ -25,6 +41,7 @@
     "Reboot": "Reiniciar",
     "Shutdown": "Apagar",
     "Logo": "Limpiar Logotipo",
+    "ShowLogo": "Mostrar logotipo",
     "Clean": "Limpio KML",
     "alert": "¡Éxito!",
     "alert2": "Puede encontrar un KML que contenga los datos del mapa del proyecto en su carpeta de Descargas",
