--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -13,11 +13,27 @@
     "help": "मदद",
     "about": "बारे में",
     "task": "लिक्विड गैलेक्सी टास्क",
-    "connection": "कनेक्शन प्रबंधक",
+    "connection": "LG कनेक्शन प्रबंधक",
     "settings": "समायोजन",
     "tour": "एक टूर लें",
     "inventory": "भंडार",
     "exit": "बाहर"
+  },
+  "about": {
+    "title": "प्रोजेक्ट के बारे में",
+    "name": "रॉकेट लॉन्चर विज़ुअलाइज़र ऐप",
+    "author": "लेखक का नाम: मानस कुमार",
+    "mentor": "गुरु का नाम: यशराज भारती और विक्टर कैरेरास",
+    "admin": "संगठन व्यवस्थापक का नाम - आंद्रेउ इबनेज़",
+    "contact": "डेवलपर संपर्क जानकारी - manash.kumar.cd.eee21@iitbh.ac.in",
+    "all_about": "रॉकेट लॉन्चर विज़ुअलाइज़र ऐप के बारे में सब कुछ:",
+    "p1": "⬧ यह प्रोजेक्ट लिक्विड गैलेक्सी संगठन के साथ Google Summer of Code 2023 के दौरान बनाया गया था।",
+    "p2": "⬧ यह ऐप लिक्विड गैलेक्सी के तहत मानश कुमार (ईमेल: manash.kumar.cd.eee21@iitbh.ac.in) द्वारा विकसित किया गया है।\n    Google Summer of Code 2023 प्रोग्राम को धन्यवाद।",
+    "p3": "⬧ आरएलए ऐप विभिन्न रॉकेट लॉन्च और उपग्रहों (मुख्य रूप से स्टारलिंक) के विज़ुअलाइज़ेशन के लिए एक ट्रैकिंग टूल के रूप में कार्य करता है।\n    स्पेसएक्स का और उन्हें एनिमेशन केएमएल के साथ खूबसूरती से प्रदर्शित करता है।",
+    "p4": "⬧ आरएलए हमारे एप्लिकेशन का उपयोग शैक्षिक और अनुसंधान उद्देश्यों के लिए भी कर सकता है, जैसे रॉकेट के प्रक्षेप पथ के बारे में अध्ययन करना\n    प्रक्षेपण और उसके बाद के चरण, उपग्रहों और उनकी वास्तविक समय स्थिति की कल्पना करना।",
+    "p5": "⬧ विभिन्न लॉन्च और मिशन डेटा और उपग्रह डेटा के कई विज़ुअलाइज़ेशन प्रत्येक के लिए विस्तृत जानकारी के साथ मौजूद हैं\n    उनके अधिक जानकारी टैब में।",
+    "p6": "⬧ ऐप दस भाषाओं को सपोर्ट करता है, जैसे अंग्रेजी, स्पेनिश, हिंदी, जर्मन, पुर्तगाली, अरबी, रूसी, जापानी,\n    चीनी (सरलीकृत), और अल्बानियाई, जिसे सेटिंग मेनू विकल्प से बदला जा सकता है।",
+    "p7": "⬧ लिलेडा के वैज्ञानिक पार्क की टीआईसी प्रयोगशालाओं, लिक्विड गैलेक्सी लैब, गूगल समर ऑफ कोड 2023 के सौजन्य से विकसित किया गया\n    और स्पेसएक्स एपीआई"
   },
   "tasks": {
     "LG_tasks": "लिक्विड गैलेक्सी टास्क",
@@ -25,6 +41,7 @@
     "Reboot": "रीबूट",
     "Shutdown": "बंद करें",
     "Logo": "साफ लोगो",
+    "ShowLogo": "लोगो दिखाएँ",
     "Clean": "हटा दें KML",
     "alert": "सफलता!",
     "alert2": "आप अपने डाउनलोड फ़ोल्डर में प्रोजेक्ट के मानचित्र डेटा वाला KML पा सकते हैं",
