fixed some feedback issues

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -150,7 +150,7 @@
     "upm": "Upcoming\nMissions",
     "pm": "Past\nMissions",
     "vlg": "Visualize in Liquid Galaxy",
-    "dlg": "Demo",
+    "dlg": "Orbit",
     "mn": "Mission\nName",
     "date": "15-06-2023",
     "rn": "Rocket Name",
