--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -150,7 +150,7 @@
     "upm": "Próximas\nmisiones",
     "pm": "Misiones\npasadas",
     "vlg": "Ver en Liquid Galaxy",
-    "dlg": "Demo",
+    "dlg": "Orbita",
     "mn": "Nombre de\nla misión",
     "date": "15-06-2023",
     "rn": "Nombre del cohete",
@@ -159,7 +159,7 @@
     "sd": "Seleccione fecha",
     "sdr": "Seleccionar rango de fechas",
     "buildorbit": "Órbita de inicio",
-    "stoporbit": "Detener la órbita",
+    "stoporbit": "Órbita de parada",
     "alert": "Sin geodatos",
     "alert2": "Parece que no ha agregado datos geográficos a este proyecto.",
     "alert3": "¡Error de lanzamiento!",
