--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -151,7 +151,7 @@
     "upm": "आगामी\nमिशन",
     "pm": "विगत\nमिशन",
     "vlg": "लिक्विड गैलेक्सी में देखें",
-    "dlg": "प्रदर्शन",
+    "dlg": "परिक्रमा",
     "mn": "मिशन\nका नाम",
     "date": "15-06-2023",
     "rn": "रॉकेट का नाम",
