UI changes and adding starlink details

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -226,7 +226,7 @@
   "inventory": {
     "title": "Inventory",
     "rockets": "Rockets",
-    "satellites": "Satellites",
+    "satellites": "Starlink Satellites",
     "search": "Search",
     "spacex": "SpaceX",
     "nasa": "NASA",
